--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,14 @@
       name="description"
       content="Youtube to Mp3 by Pablo Atenciano Jurado"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.11/dist/css/uikit.min.css" />
+
+<!-- UIkit JS -->
+
+    <link rel="stylesheet" href="awesomplete.base.css">
+        <link rel="stylesheet" href="awesomplete.theme.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script type="text/javascript" src="awesomplete.min.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
